# SkillScrapper

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml  verify_cli.py
.agents/skills/acceptance-orchestrator/: SKILL.md
.agents/skills/agent-orchestrator/: SKILL.md
.agents/skills/ai-native-cli/: SKILL.md
.agents/skills/antigravity-skill-orchestrator/: SKILL.md
.agents/skills/async-python-patterns/: SKILL.md
.agents/skills/business-analyst/: SKILL.md
.agents/skills/closed-loop-delivery/: SKILL.md
.agents/skills/context-management-context-restore/: SKILL.md
.agents/skills/context-management-context-save/: SKILL.md
.agents/skills/deep-research/: SKILL.md
.agents/skills/dispatching-parallel-agents/: SKILL.md
.agents/skills/multi-agent-task-orchestrator/: SKILL.md
docs/: MANUAL.md
skillscrapper_v1/: .agent_memory.json  .gitignore  README.md  verify_cli_v2.py  verify_cli_v3.py  verify_combos.py  verify_targets.py
skillscrapper_v1/docs/: QUICKSTART.md
skillscrapper_v1/src/skillscraper/: __main__.py
skillscrapper_v1/src/skillscraper/core/: collection.py  combos.py  library.py  targets.py  utils.py
skillscrapper_v1/tests/: conftest.py  test_collection.py  test_core_mvp.py  test_hardening.py  test_integration.py  test_repos.py  test_sync.py  test_targets.py
src/skillscraper/: cli.py
src/skillscraper/core/: paths.py  repos.py  search.py  sync.py
src/skillscraper/models/: repo.py  skill.py
src/skillscraper/tui/: app.py  command_palette.py
tests/: test_combos.py  test_library.py  test_paths.py  test_search.py
(+8 files in other folders)
